[build-system]
requires = ["hatchling", "hatch-nativelib"]
build-backend = "hatchling.build"

[project]
name = "photontargeting-native"
version = "0.0.1"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.hooks.custom]
path = "build_hook.py"

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/photontargeting-native.pc"
name = "photontargeting-native"
description = "Native Photonvision targeting"


includedir = "src/include"
libdir = "src/lib"
shared_libraries = ["photontargeting"]