[build-system]
requires = ["hatchling", "hatch-nativelib"]
build-backend = "hatchling.build"

[project]
name = "photonlib-native"
version = "0.0.1"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.hooks.custom]
path = "build_hook.py"

[[tool.hatch.build.hooks.nativelib.pcfile]]
pcfile = "src/photonlib-native/photonlib-native.pc"
name = "photonlib-native"
description = "Native Photonvision vendordep"


includedir = "src/photonlib-native/include"
libdir = "src/photonlib-native/lib"
shared_libraries = ["photonlib"]